/*
 * $Id: ChangeLog,v 1.2870 2004/05/04 16:04:44 mauriliolongo Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-05-04 18:21 UTC+0200 Maurilio Longo <maurilio.longo@libero.it>
   * source/vm/arrays.c
     ! line 1562 did not compile with tracing on
   * source/vm/cmdarg.c
     + added OS/2 support to //F: CLIPPER= environment variable switch

2004-05-04 17:55 UTC+0200 Maurilio Longo <maurilio.longo@libero.it>
  * config/os2/gcc.cf
    * switched to gcc version 3.2.2 (Innotek Build 2004-02-23 14:15), so I had to add -DTCPV40HDRS to
      compile using 16/32 bit tcp stack as available on OS/2 v4.x
    + addes -static -s to LD flags to build .exe files which don't require Innotek LIBC .dll, since
      this is a compiler suite (xHarbour, I mean) I create .exe files which run as they are without any other
      prerequisite. (This makes it possible to use a GCC compiled harbour.exe to emit C code which gets compiled
      by a different C compiler, let's say watcom for OS/2)
  * config/os2/global.cf
    + addef an ifndef MF on top of it to stop clean rule redefinition, without this clean was executed 4
      times for each make clean invocation

2004-05-03 20:21 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * tests/pp.prg
  * tests/pp.txt
  * tests/rp_run.src
    + Added support for FOR EACH [HB_EnumIndex()] [LOOP] [EXIT] NEXT

2004-05-04 12:00 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rdd/dbf1.c
  * source/rdd/dbfdbt\dbfdbt1.c
  * source/rdd/dbffpt\dbffpt1.c
    - Changes to correctly support Creating, Reading & Writing Visual Foxpro
      0x30 type DBF files.
      Note: Only basic Clipper field types ( C/D/N/M/L ) are supported ( ATM )
  * source/rdd/dbf1.c
    + HB_FUNC( DBSETDBFVERSION )
      Function to allow setting default DBF creation type to VFP 0x30